[package]
name = "ethereum_gas_alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.33", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers = "2"
